--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KotlinAccount">
+        android:theme="@style/Theme.KotlinAccount"
+        android:name=".AccountApplication">
+        <activity android:name=".NewTypeActivity"></activity>
+        <activity android:name=".NewItemActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
