--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.biometric:biometric:1.0.0-beta01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //图表库
+    implementation 'org.xclcharts:lib:2.4'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
