--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinAccount">
-        <activity android:name=".activity.EditTypeActivity"></activity>
+        <activity android:name=".activity.TrendActivity"></activity>
+        <activity android:name=".activity.EditTypeActivity" />
         <activity android:name=".activity.NewTypeActivity" />
         <activity android:name=".activity.NewItemActivity" />
         <activity android:name=".activity.MainActivity">
