--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.READ_LOGS"
+    <uses-permission
+        android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
 
     <application
@@ -17,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinAccount">
-        <activity android:name=".activity.KLineActivity"></activity>
+        <activity android:name=".activity.ProtocolActivity"></activity>
+        <activity android:name=".activity.KLineActivity" />
         <activity android:name=".activity.ShareActivity" />
         <activity android:name=".activity.EditTypeActivity" />
         <activity android:name=".activity.NewTypeActivity" />
