--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
     <application
         android:name=".AccountApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/statistic"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/statistic"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinAccount">
         <activity android:name=".activity.ProtocolActivity"></activity>
