--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // 友盟基础组件库（所有友盟业务SDK都依赖基础组件库）
+    implementation "com.umeng.umsdk:common:9.4.0"
+    implementation "com.umeng.umsdk:asms:1.2.3" // asms包依赖(必选)
+
     def room_version = "2.3.0"
 
     implementation "androidx.room:room-runtime:$room_version"
