--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
 
     <meta-data
         android:name="BUGLY_APP_CHANNEL"
-        android:value="tencent" />
+        android:value="${UMENG_CHANNEL_VALUE}" />
+    <meta-data
+        android:name="UMENG_CHANNEL"
+        android:value="${UMENG_CHANNEL_VALUE}" />
 
     <application
         android:name="com.gucheng.statistichelper.AccountApplication"
