--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,22 +18,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-        
-    - name: Cache .gradle/caches
-      uses: actions/cache@v1
-      with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: ${{ runner.os }}-gradle-
-    
-    - name: Cache .gradle/wrapper
-      uses: actions/cache@v1
-      with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle-wrapper-
           
 
+    - name: Grant execute wrapper
+      run: gradle wrapper --gradle-version 6.5
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
