--- a/.github/workflows/android_master.yml
+++ b/.github/workflows/android_master.yml
@@ -23,3 +23,8 @@ jobs:
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew assembleRelease
+
+      -uses:actions/upload-artifact@v2
+       with:
+         name:upload apk
+         path:${{github.workspace}}/app/build/outputs/apk/**/*.apk
