--- a/.github/workflows/android_master.yml
+++ b/.github/workflows/android_master.yml
@@ -27,4 +27,6 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: upload apk
-          path: ${{github.workspace}}/app/build/outputs/apk/**/*.apk
+          path:
+            ${{github.workspace}}/app/build/outputs/apk/tencent/release/*.apk
+            ${{github.workspace}}/app/build/outputs/apk/xiaomi/release/*.apk
