--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,9 @@ dependencies {
 //    implementation 'org.xclcharts:lib:2.4'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    //内存泄漏检测
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
