--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
 
-
     <meta-data
         android:name="BUGLY_APP_CHANNEL"
         android:value="${UMENG_CHANNEL_VALUE}" />
@@ -19,19 +18,20 @@
         android:value="${UMENG_CHANNEL_VALUE}" />
 
     <application
-        android:name="com.gucheng.statistichelper.AccountApplication"
+        android:name=".AccountApplication"
         android:allowBackup="true"
         android:icon="@mipmap/statistic"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/statistic"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinAccount">
-        <activity android:name="com.gucheng.statistichelper.activity.ProtocolActivity"></activity>
-        <activity android:name="com.gucheng.statistichelper.activity.KLineActivity" />
-        <activity android:name="com.gucheng.statistichelper.activity.ShareActivity" />
-        <activity android:name="com.gucheng.statistichelper.activity.EditTypeActivity" />
-        <activity android:name="com.gucheng.statistichelper.activity.NewItemActivity" />
-        <activity android:name="com.gucheng.statistichelper.activity.MainActivity">
+        <activity android:name=".activity.ChangeDetailsActivity"></activity>
+        <activity android:name=".activity.ProtocolActivity" />
+        <activity android:name=".activity.KLineActivity" />
+        <activity android:name=".activity.ShareActivity" />
+        <activity android:name=".activity.EditTypeActivity" />
+        <activity android:name=".activity.NewItemActivity" />
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
