--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,10 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
+//    implementation 'com.yanzhenjie.recyclerview:x:1.3.2'
+
+    implementation project(':x')
+
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
