--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,12 @@ static def releaseTime() {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.gucheng.statistic.helper"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 7
+        versionCode 6
         versionName "1.3.5"
 
         flavorDimensions "versionCode"
@@ -95,6 +94,7 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 
     implementation 'androidx.core:core-ktx:1.2.0'
+    implementation project(path: ':checkversion')
     def work_version = "2.5.0"
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -134,6 +134,9 @@ dependencies {
 //    implementation 'com.yanzhenjie.recyclerview:x:1.3.2'
 
     implementation project(':x')
+
+    implementation("io.reactivex.rxjava3:rxkotlin:3.0.1")
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
