--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ static def releaseTime() {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.gucheng.statistic.helper"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 8
         versionName "1.3.6"
 
@@ -90,13 +90,13 @@ dependencies {
     implementation "androidx.activity:activity-ktx:$rootProject.activityVersion"
 
     //tencent bugly
-    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
-    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
+//    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
+//    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation project(path: ':checkversion')
     def work_version = "2.5.0"
-    implementation "androidx.work:work-runtime-ktx:$work_version"
+//    implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -122,9 +122,6 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
 
-    // To use Kotlin annotation processing tool (kapt)
-    kapt "androidx.room:room-compiler:$room_version"
-    annotationProcessor "androidx.room:room-compiler:2.2.0-rc01"
     // To use Kotlin Symbolic Processing (KSP)
 //    ksp "androidx.room:room-compiler:$room_version"
 
