--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -4,4 +4,5 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 #distributionUrl=file\:/Users/liuwei/Code/gradles/gradle-6.5-bin.zip
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-bin.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-bin.zip
+distributionUrl=file:///D:/gradles/gradle-6.7.1-bin.zip
