upgrade AGP, upgrade compileSDKVersion

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ android.enableJetifier=true
 kotlin.code.style=official
 org.gradle.daemon=true
 kapt.incremental.apt=true
+ksp.incremental=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
