--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ static def releaseTime() {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.gucheng.statistic.helper"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 8
         versionName "1.3.6"
 
@@ -53,12 +53,12 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+//    kotlinOptions {
+//        jvmTarget = '1.8'
+//    }
 
     productFlavors {
         tencent {
@@ -68,6 +68,7 @@ android {
             manifestPlaceholders = [UMENG_CHANNEL_VALUE:"huawei"]
         }
     }
+    namespace 'com.gucheng.statistichelper'
 
     applicationVariants.all {
         variant ->
@@ -118,12 +119,12 @@ dependencies {
     implementation "com.umeng.umsdk:common:9.6.3"
     implementation "com.umeng.umsdk:asms:1.8.0" // asms包依赖(必选)
 
-    def room_version = "2.3.0"
+    def room_version = "2.6.1"
 
     implementation "androidx.room:room-runtime:$room_version"
 
     // To use Kotlin Symbolic Processing (KSP)
-//    ksp "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
