--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-kapt'
+//    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
 }
 
 static def releaseTime() {
@@ -119,12 +120,12 @@ dependencies {
     implementation "com.umeng.umsdk:common:9.6.3"
     implementation "com.umeng.umsdk:asms:1.8.0" // asms包依赖(必选)
 
-    def room_version = "2.6.1"
+    def room_version = "2.5.0"
 
     implementation "androidx.room:room-runtime:$room_version"
 
     // To use Kotlin Symbolic Processing (KSP)
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
