--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.google.devtools.ksp' version '1.8.0-1.0.8' apply false
+}
+
 allprojects {
     repositories {
         google()
