--- a/gradle.properties
+++ b/gradle.properties
@@ -20,8 +20,7 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 org.gradle.daemon=true
-kapt.incremental.apt=true
+#kapt.incremental.apt=true
 ksp.incremental=true
-android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
